REFINE - Update NoSenseController to use RedirectAttributes for error handling and enhance session attribute management; better messages to the user; checkbox and select choices are saved; graph image, and words cleared on new sentence analysis; toxicity cleared on new sentence generation.