@@ -21,18 +21,24 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.SessionAttributes;
 import org.springframework.web.bind.support.SessionStatus;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 @Controller
-@SessionAttributes(
-    {
+@SessionAttributes({
         "sessionId",
         "inputSentence",
         "templateSentence",
         "generatedSentence",
         "toxicityResultTokens",
         "graphImageName",
-    }
-)
+        "nouns",
+        "verbsPresent",
+        "verbsPast",
+        "verbsFuture",
+        "adjectives",
+        "requestSyntacticTree",
+        "selectedTime"
+})
 public class NoSenseController {
 
     private Generator generator;
@@ -62,6 +68,27 @@ public class NoSenseController {
         if (!model.containsAttribute("graphImageName")) {
             model.addAttribute("graphImageName", null);
         }
+        if (!model.containsAttribute("nouns")) {
+            model.addAttribute("nouns", null);
+        }
+        if (!model.containsAttribute("verbsPresent")) {
+            model.addAttribute("verbsPresent", null);
+        }
+        if (!model.containsAttribute("verbsPast")) {
+            model.addAttribute("verbsPast", null);
+        }
+        if (!model.containsAttribute("verbsFuture")) {
+            model.addAttribute("verbsFuture", null);
+        }
+        if (!model.containsAttribute("adjectives")) {
+            model.addAttribute("adjectives", null);
+        }
+        if (!model.containsAttribute("requestSyntacticTree")) {
+            model.addAttribute("requestSyntacticTree", false);
+        }
+        if (!model.containsAttribute("selectedTime")) {
+            model.addAttribute("selectedTime", "PRESENT");
+        }
     }
 
     @GetMapping("/")
@@ -71,104 +98,164 @@ public class NoSenseController {
 
     @PostMapping("/analyze")
     public String analyzeInputSentence(
-        @ModelAttribute("sessionId") String sessionId,
-        @RequestParam String sentence,
-        @RequestParam(defaultValue = "false") boolean requestSyntacticTree,
-        Model model
-    ) {
-        if (sentence.trim().isEmpty()) {
-            model.addAttribute("error", "Please enter a sentence to analyze");
+            @ModelAttribute("sessionId") String sessionId,
+            @RequestParam String sentence,
+            @RequestParam(defaultValue = "false") boolean requestSyntacticTree,
+            Model model,
+            RedirectAttributes redirectAttributes) {
+        if (sentence == null || sentence.isBlank()) {
+            redirectAttributes.addFlashAttribute("error", "Please enter a sentence to analyze");
+            return "redirect:/";
+        }
+
+        if (sessionId == null || sessionId.isEmpty()) {
+            redirectAttributes.addFlashAttribute("error", "No session ID provided");
             return "redirect:/";
         }
 
         try {
+            model.addAttribute("inputSentence", new Sentence(""));
+            model.addAttribute("templateSentence", "");
+            model.addAttribute("generatedSentence", new Sentence(""));
+
+            // Should not be needed, but just in case
+            model.addAttribute("nouns", null);
+            model.addAttribute("verbsPresent", null);
+            model.addAttribute("verbsPast", null);
+            model.addAttribute("verbsFuture", null);
+            model.addAttribute("adjectives", null);
+
+            model.addAttribute("toxicityResultTokens", null);
+            model.addAttribute("graphImageName", null);
+
+            model.addAttribute("selectedTime", "PRESENT");
+
             Sentence inputSentence = new Sentence(sentence);
+
             inputSentence.setAnalysisResultTokens(
-                Analyzer.analyzeSyntax(sentence)
-            );
+                    Analyzer.analyzeSyntax(sentence));
+
+            ArrayList<String> nouns = inputSentence.getNouns();
+            ArrayList<String> verbsPresent = inputSentence.getVerbs("PRESENT");
+            ArrayList<String> verbsPast = inputSentence.getVerbs("PAST");
+            ArrayList<String> verbsFuture = inputSentence.getVerbs("FUTURE");
+            ArrayList<String> adjectives = inputSentence.getAdjectives();
 
             if (requestSyntacticTree) {
                 GraphvizGenerator.GenerateDependencyGraph(
-                    inputSentence.getAnalysisResultTokens(),
-                    "graph" + sessionId
-                );
+                        inputSentence.getAnalysisResultTokens(),
+                        "graph" + sessionId);
                 model.addAttribute(
-                    "graphImageName",
-                    GraphvizRenderer.RenderDependencyGraph("graph" + sessionId)
-                );
+                        "graphImageName",
+                        GraphvizRenderer.RenderDependencyGraph("graph" + sessionId));
             }
 
             model.addAttribute("inputSentence", inputSentence);
+            model.addAttribute("nouns", nouns);
+            model.addAttribute("verbsPresent", verbsPresent);
+            model.addAttribute("verbsPast", verbsPast);
+            model.addAttribute("verbsFuture", verbsFuture);
+            model.addAttribute("adjectives", adjectives);
+
+            model.addAttribute("requestSyntacticTree", requestSyntacticTree);
 
             return "redirect:/";
         } catch (Exception e) {
-            model.addAttribute(
-                "error",
-                "Failed to analyze sentence: " + e.getMessage()
-            );
+            redirectAttributes.addFlashAttribute(
+                    "error",
+                    "Failed to analyze sentence: " + e.getMessage());
             return "redirect:/";
         }
     }
 
     @PostMapping("/generate")
     public String generateSentence(
-        @RequestParam(required = false, defaultValue = "present") String time,
-        @ModelAttribute("inputSentence") Sentence inputSentence,
-        Model model
-    ) {
+            @RequestParam(required = false, defaultValue = "PRESENT") String time,
+            @ModelAttribute("inputSentence") Sentence inputSentence,
+            Model model,
+            RedirectAttributes redirectAttributes) {
         if (inputSentence == null || inputSentence.isTextBlank()) {
-            model.addAttribute(
-                "error",
-                "No input sentence has been analyzed yet"
-            );
+            redirectAttributes.addFlashAttribute(
+                    "error",
+                    "No input sentence has been analyzed yet");
+            return "redirect:/";
+        }
+
+        String normalizedTime = time == null ? "PRESENT" : time.trim().toUpperCase();
+
+        if (!normalizedTime.equalsIgnoreCase("PRESENT") &&
+                !normalizedTime.equalsIgnoreCase("PAST") &&
+                !normalizedTime.equalsIgnoreCase("FUTURE")) {
+            redirectAttributes.addFlashAttribute(
+                    "error",
+                    "Invalid time value. Allowed values are PRESENT, PAST, or FUTURE.");
             return "redirect:/";
         }
 
         try {
+            model.addAttribute("toxicityResultTokens", null);
+
             String templateSentence = generator.generateTemplateSentence();
             Sentence generatedSentence = generator.fillTemplateSentence(
-                templateSentence,
-                inputSentence,
-                time
-            );
+                    templateSentence,
+                    inputSentence,
+                    normalizedTime);
 
             model.addAttribute("templateSentence", templateSentence);
             model.addAttribute("generatedSentence", generatedSentence);
 
+            model.addAttribute("selectedTime", normalizedTime);
+
             return "redirect:/";
         } catch (Exception e) {
-            model.addAttribute(
-                "error",
-                "Error generating sentence: " + e.getMessage()
-            );
+            redirectAttributes.addFlashAttribute(
+                    "error",
+                    "Error generating sentence: " + e.getMessage());
             return "redirect:/";
         }
     }
 
     @PostMapping("/save")
     public String saveTerms(
-        @ModelAttribute("inputSentence") Sentence inputSentence,
-        Model model
-    ) {
+            @ModelAttribute("inputSentence") Sentence inputSentence,
+            Model model,
+            RedirectAttributes redirectAttributes) {
         if (inputSentence == null || inputSentence.isTextBlank()) {
-            model.addAttribute(
-                "error",
-                "No sentence to save. Please analyze a sentence first."
-            );
+            redirectAttributes.addFlashAttribute(
+                    "error",
+                    "No sentence to save. Please analyze a sentence first.");
             return "redirect:/";
         }
 
         try {
             generator.saveFromSentence(inputSentence);
 
-            model.addAttribute("success", "Terms saved successfully!");
+            List<String> empty = new ArrayList<>();
+            if (inputSentence.getNouns().isEmpty())
+                empty.add("nouns");
+            if (inputSentence.getVerbs("PRESENT").isEmpty())
+                empty.add("present verbs");
+            if (inputSentence.getVerbs("PAST").isEmpty())
+                empty.add("past verbs");
+            if (inputSentence.getVerbs("FUTURE").isEmpty())
+                empty.add("future verbs");
+            if (inputSentence.getAdjectives().isEmpty())
+                empty.add("adjectives");
+
+            if (empty.size() == 5) {
+                redirectAttributes.addFlashAttribute("error",
+                        "No terms found to save. Please analyze a more complete sentence.");
+            } else if (!empty.isEmpty()) {
+                redirectAttributes.addFlashAttribute("warning", "Some terms were missing: " + String.join(", ", empty));
+            } else {
+                redirectAttributes.addFlashAttribute("success", "Terms saved successfully!");
+            }
 
             return "redirect:/";
         } catch (Exception e) {
-            model.addAttribute(
-                "error",
-                "Failed to save terms: " + e.getMessage()
-            );
+            redirectAttributes.addFlashAttribute(
+                    "error",
+                    "Failed to save terms: " + e.getMessage());
             return "redirect:/";
         }
     }
@@ -181,33 +268,29 @@ public class NoSenseController {
 
     @PostMapping("/toxicity")
     public String analyzeToxicity(
-        @ModelAttribute("generatedSentence") Sentence generatedSentence,
-        Model model
-    ) {
+            @ModelAttribute("generatedSentence") Sentence generatedSentence,
+            Model model,
+            RedirectAttributes redirectAttributes) {
         if (generatedSentence == null || generatedSentence.isTextBlank()) {
-            model.addAttribute(
-                "error",
-                "No sentence has been generated yet to analyze"
-            );
+            redirectAttributes.addFlashAttribute(
+                    "error",
+                    "No sentence has been generated yet to analyze");
             return "redirect:/";
         }
 
         try {
             generatedSentence.setToxicityResultTokens(
-                Analyzer.analyzeToxicity(generatedSentence.getText())
-            );
+                    Analyzer.analyzeToxicity(generatedSentence.getText()));
 
             model.addAttribute(
-                "toxicityResultTokens",
-                generatedSentence.getToxicityResultTokens()
-            );
+                    "toxicityResultTokens",
+                    generatedSentence.getToxicityResultTokens());
 
             return "redirect:/";
         } catch (Exception e) {
-            model.addAttribute(
-                "error",
-                "Error analyzing toxicity: " + e.getMessage()
-            );
+            redirectAttributes.addFlashAttribute(
+                    "error",
+                    "Error analyzing toxicity: " + e.getMessage());
             return "redirect:/";
         }
     }
@@ -215,8 +298,7 @@ public class NoSenseController {
     @GetMapping("/graphs-images/{fileName:.+}")
     @ResponseBody
     public ResponseEntity<Resource> serveDependencyGraphImage(
-        @PathVariable String fileName
-    ) throws IOException {
+            @PathVariable String fileName) throws IOException {
         String tmpDir = System.getProperty("java.io.tmpdir");
         Path imagePath = Paths.get(tmpDir, fileName);
 
@@ -226,7 +308,7 @@ public class NoSenseController {
 
         Resource fileResource = new UrlResource(imagePath.toUri());
         return ResponseEntity.ok()
-            .header(HttpHeaders.CONTENT_TYPE, "image/png")
-            .body(fileResource);
+                .header(HttpHeaders.CONTENT_TYPE, "image/png")
+                .body(fileResource);
     }
 }
